[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dingtalk-moltbot-connector"
version = "0.3.1"
description = "将钉钉机器人连接到 Moltbot Gateway 的轻量级 Python 连接器，支持 AI Card 流式响应"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DingTalk Real Team" },
]
keywords = ["dingtalk", "moltbot", "ai", "chatbot", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dingtalk-stream>=0.17.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/DingTalk-Real-AI/dingtalk-moltbot-connector"
Repository = "https://github.com/DingTalk-Real-AI/dingtalk-moltbot-connector"

[project.scripts]
dingtalk-moltbot = "dingtalk_moltbot_connector.connector:cli_main"
